--- a/_DEV1M242/intro_objetos/dungeon.ipynb
+++ b/_DEV1M242/intro_objetos/dungeon.ipynb
@@ -16,18 +16,109 @@
       "Sala atual: Cela 1\n",
       "Sala atual: Calabouço 1\n",
       "Sala atual: Calabouço 2\n",
+      "Zaaappp! Zuum!\n",
       "Sala atual: Cela 2\n",
       "Sala atual: Patio\n",
       "Sala atual: Cela 2\n",
       "Sala atual: Calabouço 2\n",
       "Sala atual: Calabouço 1\n",
       "Sala atual: Sala\n",
-      "Sala atual: Sala\n"
+      "Sala atual: Hall\n"
      ]
     }
    ],
    "source": [
     "# Model do dungeon\n",
+    "\n",
+    "objetos = [\n",
+    "        {\"nome\": \"Rocha\", \"genero\": \"f\", \"dano\": 0, \"protecao\": 0},\n",
+    "        {\"nome\": \"Espada\", \"genero\": \"f\", \"dano\": 5, \"protecao\": 0},\n",
+    "        {\"nome\": \"Capa\", \"genero\": \"f\", \"dano\": 0, \"protecao\": 0},\n",
+    "        {\"nome\": \"Foice\", \"genero\": \"f\", \"dano\": 2, \"protecao\": 0},\n",
+    "        {\"nome\": \"Capacete\", \"genero\": \"m\", \"dano\": 0, \"protecao\": 5},\n",
+    "        {\"nome\": \"Peitoral\", \"genero\": \"m\", \"dano\": 0, \"protecao\": 5},\n",
+    "        {\"nome\": \"Calça\", \"genero\": \"f\", \"dano\": 0, \"protecao\": 5},\n",
+    "        {\"nome\": \"Picareta\", \"genero\": \"f\", \"dano\": 3, \"protecao\": 0},\n",
+    "        {\"nome\": \"Machado\", \"genero\": \"m\", \"dano\": 4, \"protecao\": 0},\n",
+    "        {\"nome\": \"Cenoura\", \"genero\": \"f\", \"dano\": 0, \"protecao\": 0},\n",
+    "        {\"nome\": \"Gema\", \"genero\": \"f\", \"dano\": 0, \"protecao\": 0},\n",
+    "        {\"nome\": \"Moeda\", \"genero\": \"f\", \"dano\": 0, \"protecao\": 0}\n",
+    "    ]\n",
+    "\n",
+    "adjetivos = [\n",
+    "        {\"f\": \"Feroz\", \"m\": \"Feroz\", \"dano\": 5, \"protecao\": 0},\n",
+    "        {\"f\": \"Fulminante\", \"m\": \"Fulminante\", \"dano\": 5, \"protecao\": 0},\n",
+    "        {\"f\": \"Vingativa\", \"m\": \"Vingativo\", \"dano\": 5, \"protecao\": 0},\n",
+    "        {\"f\": \"Bela como a Lua\", \"m\": \"Belo como a Lua\", \"dano\": 0, \"protecao\": 0},\n",
+    "        {\"f\": \"Reluzente\", \"m\": \"Reluzente\", \"dano\": 0, \"protecao\": 0},\n",
+    "        {\"f\": \"Fervescente\", \"m\": \"Fervescente\", \"dano\": 0, \"protecao\": 0}\n",
+    "    ]\n",
+    "\n",
+    "complementos = [\n",
+    "        {\"f\": \"Forjada na lua\", \"m\": \"Forjado na lua\", \"dano\": 5, \"protecao\": 5},\n",
+    "        {\"f\": \"do Minotauro\", \"m\": \"do Minotauro\", \"dano\": 5, \"protecao\": 5},\n",
+    "        {\"f\": \"dos confins do inferno\",\n",
+    "            \"m\": \"dos confins do inferno\", \"dano\": 0, \"protecao\": 0},\n",
+    "        {\"f\": \"Enferrujada\", \"m\": \"Enferrujado\", \"dano\": -2, \"protecao\": -2},\n",
+    "        {\"f\": \"Perfeita\", \"m\": \"Perfeito\", \"dano\": 0, \"protecao\": 0},\n",
+    "        {\"f\": \"Usada pelo Rei de Minas\",\n",
+    "            \"m\": \"Usado pelo Rei de Minas\", \"dano\": 0, \"protecao\": 0}\n",
+    "    ]\n",
+    "\n",
+    "\n",
+    "import random\n",
+    "\n",
+    "\n",
+    "class Item:\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        self.dano = 0\n",
+    "        self.protecao = 0\n",
+    "        self.nome = str()\n",
+    "       \n",
+    "        self.objeto = random.choice(objetos)\n",
+    "        self.adjetivo = random.choice(adjetivos)\n",
+    "        self.complemento = random.choice(complementos)\n",
+    "\n",
+    "        self.dano = self.objeto[\"dano\"] + self.adjetivo[\"dano\"] + self.complemento[\"dano\"]\n",
+    "        \n",
+    "        self.protecao = self.objeto[\"protecao\"] + self.adjetivo[\"protecao\"] + self.complemento[\"protecao\"]\n",
+    "        \n",
+    "        self.genero_objeto = self.objeto[\"genero\"]\n",
+    "\n",
+    "        self.nome = f\"{self.objeto[\"nome\"]} {self.adjetivo[self.genero_objeto]} {self.complemento[self.genero_objeto]}\"\n",
+    "        \n",
+    "\n",
+    "    def get_nome(self):\n",
+    "        return self.nome\n",
+    "\n",
+    "    def get_quant(self):\n",
+    "        return self.quant\n",
+    "\n",
+    "    def set_dano(self, novo_Dano):\n",
+    "        self.dano = novo_Dano\n",
+    "\n",
+    "    def get_dano(self):\n",
+    "        return self.dano\n",
+    "\n",
+    "    def set_protecao(self, nova_protecao):\n",
+    "        self.protecao = nova_protecao\n",
+    "\n",
+    "    def get_protecao(self):\n",
+    "        return self.protecao\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        if self.dano > 0:\n",
+    "            return f\"Item [Nome: {self.get_nome()}, dano = {self.get_dano()}]\"\n",
+    "\n",
+    "        if self.protecao > 0:\n",
+    "            return f\"Item [Nome: {self.get_nome()}, protecao = {self.protecao}]\"\n",
+    "\n",
+    "        if self.dano > 0 and self.protecao > 0:\n",
+    "            return f\"Item [Nome: {self.get_nome()}, dano = {self.get_dano()}, protecao = {self.protecao}]\"\n",
+    "\n",
+    "        return f\"Item [Nome: {self.get_nome()}\"\n",
+    "\n",
     "\n",
     "class Cena():\n",
     "    def __init__(self, nome=\"Indefinida\"):\n",
@@ -39,7 +130,6 @@
     "        self.sul = None\n",
     "        self.leste = None\n",
     "        self.oeste = None\n",
-    "\n",
     "\n",
     "class Personagem():\n",
     "    def __init__(self):\n",
@@ -65,9 +155,20 @@
     "            self.sala =self.sala.oeste # minha sala atual é a sala que está ao meu oeste\n",
     "            print(self)\n",
     "\n",
+    "    def atacar(self):\n",
+    "        pass\n",
+    "\n",
     "    def __str__(self):\n",
     "        return f'Sala atual: {self.sala.nome}'\n",
-    "    \n",
+    "\n",
+    "class Mago(Personagem):\n",
+    "    def atacar(self):\n",
+    "        print(\"Zaaappp! Zuum!\")\n",
+    "\n",
+    "class Guerreiro(Personagem):\n",
+    "    def atacar(self):\n",
+    "        print(\"Classhh! Smashh!!!\")\n",
+    "\n",
     "\n",
     "####################\n",
     "# Model\n",
@@ -86,7 +187,7 @@
     "#########################\n",
     "# Model\n",
     "# Criação dos personagens\n",
-    "heroi = Personagem()\n",
+    "heroi = Mago()\n",
     "\n",
     "# personagem inicia no Hall\n",
     "heroi.sala = hall\n",
@@ -132,6 +233,15 @@
     "heroi.andar_leste()\n",
     "heroi.andar_oeste()\n",
     "heroi.andar_sul()\n",
+    "\n",
+    "heroi.coletar(\"espada\")\n",
+    "heroi.coletar(\"lança\")\n",
+    "heroi.equipar(\"espada\")\n",
+    "heroi.atacar()\n",
+    "heroi.equipar(\"lança\")\n",
+    "heroi.atacar()\n",
+    "heroi.soltar(\"espada\")\n",
+    "\n",
     "heroi.andar_leste()\n",
     "heroi.andar_leste()\n",
     "heroi.andar_oeste()\n",
@@ -140,7 +250,7 @@
     "heroi.andar_norte()\n",
     "heroi.andar_norte()\n",
     "heroi.andar_oeste()\n",
-    "print(heroi)\n",
+    "\n",
     "    "
    ]
   }
