--- a/_DEV1M242/intro_objetos/dungeon.ipynb
+++ b/_DEV1M242/intro_objetos/dungeon.ipynb
@@ -10,20 +10,65 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sala atual: Hall\n",
-      "Sala atual: Sala\n",
-      "Sala atual: Calabouço 1\n",
-      "Sala atual: Cela 1\n",
-      "Sala atual: Calabouço 1\n",
-      "Sala atual: Calabouço 2\n",
-      "Zaaappp! Zuum!\n",
-      "Sala atual: Cela 2\n",
-      "Sala atual: Patio\n",
-      "Sala atual: Cela 2\n",
-      "Sala atual: Calabouço 2\n",
-      "Sala atual: Calabouço 1\n",
-      "Sala atual: Sala\n",
-      "Sala atual: Hall\n"
+      "\n",
+      "* <class '__main__.Mago'> *\n",
+      "\n",
+      "\n",
+      "[Sala]\n",
+      "Itens: {}\n",
+      "\n",
+      "\n",
+      "\n",
+      "* <class '__main__.Mago'> *\n",
+      "\n",
+      "\n",
+      "[Sala]\n",
+      "Itens: {}\n",
+      "\n",
+      "\n",
+      "\n",
+      "* <class '__main__.Mago'> *\n",
+      "\n",
+      "\n",
+      "[Sala]\n",
+      "Itens: {}\n",
+      "\n",
+      "\n",
+      "\n",
+      "* <class '__main__.Mago'> *\n",
+      "\n",
+      "\n",
+      "[Sala]\n",
+      "Itens: {}\n",
+      "\n",
+      "\n",
+      "\n",
+      "* <class '__main__.Mago'> *\n",
+      "\n",
+      "\n",
+      "[Sala]\n",
+      "Itens: {}\n",
+      "\n",
+      "\n",
+      "\n",
+      "* <class '__main__.Mago'> *\n",
+      "\n",
+      "\n",
+      "[Sala]\n",
+      "Itens: {}\n",
+      "\n",
+      "\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'Mago' object has no attribute 'coletar'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[23]\u001b[39m\u001b[32m, line 228\u001b[39m\n\u001b[32m    225\u001b[39m heroi.andar_oeste()\n\u001b[32m    226\u001b[39m heroi.andar_sul()\n\u001b[32m--> \u001b[39m\u001b[32m228\u001b[39m \u001b[43mheroi\u001b[49m\u001b[43m.\u001b[49m\u001b[43mcoletar\u001b[49m(\u001b[33m\"\u001b[39m\u001b[33mespada\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m    229\u001b[39m heroi.coletar(\u001b[33m\"\u001b[39m\u001b[33mlança\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m    230\u001b[39m heroi.equipar(\u001b[33m\"\u001b[39m\u001b[33mespada\u001b[39m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[31mAttributeError\u001b[39m: 'Mago' object has no attribute 'coletar'"
      ]
     }
    ],
@@ -67,7 +112,6 @@
     "\n",
     "\n",
     "import random\n",
-    "\n",
     "\n",
     "class Item:\n",
     "\n",
@@ -119,17 +163,35 @@
     "\n",
     "        return f\"Item [Nome: {self.get_nome()}\"\n",
     "\n",
-    "\n",
     "class Cena():\n",
     "    def __init__(self, nome=\"Indefinida\"):\n",
     "        # identificação\n",
     "        self.nome = nome\n",
     "\n",
-    "        # Salas conectadas a esta sala\n",
+    "        self.itens = dict()\n",
+    "\n",
+    "        # Cenas conectadas a esta cena\n",
     "        self.norte = None\n",
     "        self.sul = None\n",
     "        self.leste = None\n",
     "        self.oeste = None\n",
+    "\n",
+    "    def colocar_item(self, um_item):\n",
+    "        self.itens[um_item.get_nome()] = um_item\n",
+    "\n",
+    "    def coletar_item(self, nome_item):\n",
+    "        # pegamos o item\n",
+    "        item_coletado = self.itens[nome_item]\n",
+    "        # retirar item da sala\n",
+    "        del self.itens[nome_item]\n",
+    "        # retornamos o item\n",
+    "        return item_coletado\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return f'''\n",
+    "[{self.nome}]\n",
+    "Itens: {self.itens}\n",
+    "'''\n",
     "\n",
     "class Personagem():\n",
     "    def __init__(self):\n",
@@ -158,8 +220,11 @@
     "    def atacar(self):\n",
     "        pass\n",
     "\n",
-    "    def __str__(self):\n",
-    "        return f'Sala atual: {self.sala.nome}'\n",
+    "    def __str__(self):        \n",
+    "        return f'''\n",
+    "* {type(self)} *\n",
+    "{self.sala}\n",
+    "'''\n",
     "\n",
     "class Mago(Personagem):\n",
     "    def atacar(self):\n",
