--- a/_DEV1M242/intro_objetos/dungeon.ipynb
+++ b/_DEV1M242/intro_objetos/dungeon.ipynb
@@ -12,7 +12,17 @@
      "text": [
       "\n",
       "* <class '__main__.Mago'> *\n",
+      "Inventário: {}\n",
+      "Equipado: None\n",
       "\n",
+      "[Hall]\n",
+      "Itens: {}\n",
+      "\n",
+      "\n",
+      "\n",
+      "* <class '__main__.Mago'> *\n",
+      "Inventário: {}\n",
+      "Equipado: None\n",
       "\n",
       "[Sala]\n",
       "Itens: {}\n",
@@ -20,7 +30,135 @@
       "\n",
       "\n",
       "* <class '__main__.Mago'> *\n",
+      "Inventário: {}\n",
+      "Equipado: None\n",
       "\n",
+      "[Calabouço 1]\n",
+      "Itens: {'espada': <__main__.Item object at 0x000001DE451486E0>, 'lança': <__main__.Item object at 0x000001DE455CDBD0>}\n",
+      "\n",
+      "\n",
+      "\n",
+      "* <class '__main__.Mago'> *\n",
+      "Inventário: {'espada': <__main__.Item object at 0x000001DE451486E0>}\n",
+      "Equipado: None\n",
+      "\n",
+      "[Calabouço 1]\n",
+      "Itens: {'lança': <__main__.Item object at 0x000001DE455CDBD0>}\n",
+      "\n",
+      "\n",
+      "\n",
+      "* <class '__main__.Mago'> *\n",
+      "Inventário: {'espada': <__main__.Item object at 0x000001DE451486E0>, 'lança': <__main__.Item object at 0x000001DE455CDBD0>}\n",
+      "Equipado: None\n",
+      "\n",
+      "[Calabouço 1]\n",
+      "Itens: {}\n",
+      "\n",
+      "\n",
+      "\n",
+      "* <class '__main__.Mago'> *\n",
+      "Inventário: {'espada': <__main__.Item object at 0x000001DE451486E0>, 'lança': <__main__.Item object at 0x000001DE455CDBD0>}\n",
+      "Equipado: Item [Nome: espada, dano = 5]\n",
+      "\n",
+      "[Calabouço 1]\n",
+      "Itens: {}\n",
+      "\n",
+      "\n",
+      "\n",
+      "* <class '__main__.Mago'> *\n",
+      "Inventário: {'espada': <__main__.Item object at 0x000001DE451486E0>, 'lança': <__main__.Item object at 0x000001DE455CDBD0>}\n",
+      "Equipado: Item [Nome: espada, dano = 5]\n",
+      "\n",
+      "[Cela 1]\n",
+      "Itens: {}\n",
+      "\n",
+      "\n",
+      "\n",
+      "* <class '__main__.Mago'> *\n",
+      "Inventário: {'espada': <__main__.Item object at 0x000001DE451486E0>, 'lança': <__main__.Item object at 0x000001DE455CDBD0>}\n",
+      "Equipado: Item [Nome: lança, dano = 5]\n",
+      "\n",
+      "[Cela 1]\n",
+      "Itens: {}\n",
+      "\n",
+      "\n",
+      "\n",
+      "* <class '__main__.Mago'> *\n",
+      "Inventário: {'lança': <__main__.Item object at 0x000001DE455CDBD0>}\n",
+      "Equipado: Item [Nome: lança, dano = 5]\n",
+      "\n",
+      "[Cela 1]\n",
+      "Itens: {'espada': <__main__.Item object at 0x000001DE451486E0>}\n",
+      "\n",
+      "\n",
+      "Item [Nome: lança, dano = 5]: Zaaappp! Zuum!\n",
+      "\n",
+      "* <class '__main__.Mago'> *\n",
+      "Inventário: {'lança': <__main__.Item object at 0x000001DE455CDBD0>}\n",
+      "Equipado: Item [Nome: lança, dano = 5]\n",
+      "\n",
+      "[Calabouço 1]\n",
+      "Itens: {}\n",
+      "\n",
+      "\n",
+      "\n",
+      "* <class '__main__.Mago'> *\n",
+      "Inventário: {'lança': <__main__.Item object at 0x000001DE455CDBD0>}\n",
+      "Equipado: Item [Nome: lança, dano = 5]\n",
+      "\n",
+      "[Calabouço 2]\n",
+      "Itens: {}\n",
+      "\n",
+      "\n",
+      "\n",
+      "* <class '__main__.Mago'> *\n",
+      "Inventário: {'lança': <__main__.Item object at 0x000001DE455CDBD0>}\n",
+      "Equipado: Item [Nome: lança, dano = 5]\n",
+      "\n",
+      "[Cela 2]\n",
+      "Itens: {}\n",
+      "\n",
+      "\n",
+      "\n",
+      "* <class '__main__.Mago'> *\n",
+      "Inventário: {'lança': <__main__.Item object at 0x000001DE455CDBD0>}\n",
+      "Equipado: Item [Nome: lança, dano = 5]\n",
+      "\n",
+      "[Patio]\n",
+      "Itens: {}\n",
+      "\n",
+      "\n",
+      "\n",
+      "* <class '__main__.Mago'> *\n",
+      "Inventário: {'lança': <__main__.Item object at 0x000001DE455CDBD0>}\n",
+      "Equipado: Item [Nome: lança, dano = 5]\n",
+      "\n",
+      "[Cela 2]\n",
+      "Itens: {}\n",
+      "\n",
+      "\n",
+      "\n",
+      "* <class '__main__.Mago'> *\n",
+      "Inventário: {'lança': <__main__.Item object at 0x000001DE455CDBD0>}\n",
+      "Equipado: Item [Nome: lança, dano = 5]\n",
+      "\n",
+      "[Calabouço 2]\n",
+      "Itens: {}\n",
+      "\n",
+      "\n",
+      "\n",
+      "* <class '__main__.Mago'> *\n",
+      "Inventário: {'lança': <__main__.Item object at 0x000001DE455CDBD0>}\n",
+      "Equipado: Item [Nome: lança, dano = 5]\n",
+      "\n",
+      "[Calabouço 1]\n",
+      "Itens: {}\n",
+      "\n",
+      "\n",
+      "\n",
+      "* <class '__main__.Mago'> *\n",
+      "Inventário: {'lança': <__main__.Item object at 0x000001DE455CDBD0>}\n",
+      "Equipado: Item [Nome: lança, dano = 5]\n",
       "\n",
       "[Sala]\n",
       "Itens: {}\n",
@@ -28,47 +166,13 @@
       "\n",
       "\n",
       "* <class '__main__.Mago'> *\n",
+      "Inventário: {'lança': <__main__.Item object at 0x000001DE455CDBD0>}\n",
+      "Equipado: Item [Nome: lança, dano = 5]\n",
       "\n",
-      "\n",
-      "[Sala]\n",
-      "Itens: {}\n",
-      "\n",
-      "\n",
-      "\n",
-      "* <class '__main__.Mago'> *\n",
-      "\n",
-      "\n",
-      "[Sala]\n",
-      "Itens: {}\n",
-      "\n",
-      "\n",
-      "\n",
-      "* <class '__main__.Mago'> *\n",
-      "\n",
-      "\n",
-      "[Sala]\n",
-      "Itens: {}\n",
-      "\n",
-      "\n",
-      "\n",
-      "* <class '__main__.Mago'> *\n",
-      "\n",
-      "\n",
-      "[Sala]\n",
+      "[Hall]\n",
       "Itens: {}\n",
       "\n",
       "\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'Mago' object has no attribute 'coletar'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[23]\u001b[39m\u001b[32m, line 228\u001b[39m\n\u001b[32m    225\u001b[39m heroi.andar_oeste()\n\u001b[32m    226\u001b[39m heroi.andar_sul()\n\u001b[32m--> \u001b[39m\u001b[32m228\u001b[39m \u001b[43mheroi\u001b[49m\u001b[43m.\u001b[49m\u001b[43mcoletar\u001b[49m(\u001b[33m\"\u001b[39m\u001b[33mespada\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m    229\u001b[39m heroi.coletar(\u001b[33m\"\u001b[39m\u001b[33mlança\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m    230\u001b[39m heroi.equipar(\u001b[33m\"\u001b[39m\u001b[33mespada\u001b[39m\u001b[33m\"\u001b[39m)\n",
-      "\u001b[31mAttributeError\u001b[39m: 'Mago' object has no attribute 'coletar'"
      ]
     }
    ],
@@ -176,7 +280,8 @@
     "        self.leste = None\n",
     "        self.oeste = None\n",
     "\n",
-    "    def colocar_item(self, um_item):\n",
+    "    def colocar_item(self, nome_item, um_item):\n",
+    "        um_item.nome = nome_item # para testes, sobrescrevemos o nome do item\n",
     "        self.itens[um_item.get_nome()] = um_item\n",
     "\n",
     "    def coletar_item(self, nome_item):\n",
@@ -196,6 +301,32 @@
     "class Personagem():\n",
     "    def __init__(self):\n",
     "        self.sala = Cena(\"Entrada\")\n",
+    "        self.inventario = dict()\n",
+    "        self.item_equipado = None\n",
+    "\n",
+    "    def coletar(self, nome_item):\n",
+    "        self.inventario[nome_item] = self.sala.coletar_item(nome_item)        \n",
+    "        print(self)\n",
+    "\n",
+    "    def equipar(self, nome_item):\n",
+    "        self.item_equipado = self.inventario[nome_item]\n",
+    "        print(self)\n",
+    "\n",
+    "    def desequipar(self):\n",
+    "        self.item_equipado = None\n",
+    "        print(self)\n",
+    "\n",
+    "    def soltar(self, nome_item):\n",
+    "        # if item está equipado, desequipa\n",
+    "        if self.item_equipado.nome == nome_item:\n",
+    "            self.desequipar()\n",
+    "        \n",
+    "        # coloco item na sala atual\n",
+    "        self.sala.colocar_item(nome_item, self.inventario[nome_item])\n",
+    "        # retirar item do inventario\n",
+    "        del self.inventario[nome_item]\n",
+    "        \n",
+    "        print(self)\n",
     "\n",
     "    def andar_norte(self):\n",
     "        if self.sala.norte: # norte é uma Sala\n",
@@ -223,16 +354,21 @@
     "    def __str__(self):        \n",
     "        return f'''\n",
     "* {type(self)} *\n",
+    "Inventário: {self.inventario}\n",
+    "Equipado: {self.item_equipado}\n",
     "{self.sala}\n",
     "'''\n",
     "\n",
     "class Mago(Personagem):\n",
     "    def atacar(self):\n",
-    "        print(\"Zaaappp! Zuum!\")\n",
+    "        if self.item_equipado.nome == \"lança\":\n",
+    "            print(f\"{self.item_equipado}: Zaaappp! Zuum!\")\n",
+    "        \n",
     "\n",
     "class Guerreiro(Personagem):\n",
     "    def atacar(self):\n",
-    "        print(\"Classhh! Smashh!!!\")\n",
+    "        if self.item_equipado.nome == \"espada\":\n",
+    "            print(f\"{self.item_equipado}: Classhh! Smashh!!!\")\n",
     "\n",
     "\n",
     "####################\n",
@@ -244,6 +380,13 @@
     "hall = Cena(\"Hall\")\n",
     "sala = Cena(\"Sala\")\n",
     "calabouco1 = Cena(\"Calabouço 1\")\n",
+    "\n",
+    "item1 = Item()\n",
+    "calabouco1.colocar_item(\"espada\", item1)\n",
+    "\n",
+    "item2 = Item()\n",
+    "calabouco1.colocar_item(\"lança\", item2)\n",
+    "\n",
     "cela1 = Cena(\"Cela 1\")\n",
     "calabouco2 = Cena(\"Calabouço 2\")\n",
     "cela2 = Cena(\"Cela 2\")\n",
@@ -252,7 +395,7 @@
     "#########################\n",
     "# Model\n",
     "# Criação dos personagens\n",
-    "heroi = Mago()\n",
+    "heroi = Guerreiro()\n",
     "\n",
     "# personagem inicia no Hall\n",
     "heroi.sala = hall\n",
@@ -295,17 +438,20 @@
     "print(heroi)\n",
     "heroi.andar_leste()\n",
     "heroi.andar_sul()\n",
-    "heroi.andar_leste()\n",
-    "heroi.andar_oeste()\n",
-    "heroi.andar_sul()\n",
     "\n",
     "heroi.coletar(\"espada\")\n",
     "heroi.coletar(\"lança\")\n",
     "heroi.equipar(\"espada\")\n",
     "heroi.atacar()\n",
+    "\n",
+    "heroi.andar_leste()\n",
+    "\n",
     "heroi.equipar(\"lança\")\n",
-    "heroi.atacar()\n",
     "heroi.soltar(\"espada\")\n",
+    "heroi.atacar()\n",
+    "\n",
+    "heroi.andar_oeste()\n",
+    "heroi.andar_sul()\n",
     "\n",
     "heroi.andar_leste()\n",
     "heroi.andar_leste()\n",
